RESOLVED FIXED209784
[ECMA-402] WebKit Intl does not allow calendar and numberingSystem options
https://bugs.webkit.org/show_bug.cgi?id=209784
Summary [ECMA-402] WebKit Intl does not allow calendar and numberingSystem options
Shane Carr
Reported 2020-03-30 15:18:29 PDT
The following proposal allows the calendar and numberingSystem to be set in the options bag for Intl objects: https://github.com/tc39/ecma402/pull/175 V8 and SpiderMonkey have implementations of this behavior ready to go. Until WebKit adds support, users will get poorer i18n support relative to other browsers.
Attachments
Patch (11.84 KB, patch)
2020-04-11 20:16 PDT, Ross Kirsling
no flags
Patch (13.71 KB, patch)
2020-04-11 21:43 PDT, Ross Kirsling
no flags
Radar WebKit Bug Importer
Comment 1 2020-03-30 16:39:37 PDT
Ross Kirsling
Comment 2 2020-04-11 20:16:00 PDT
Ross Kirsling
Comment 3 2020-04-11 21:43:37 PDT
EWS
Comment 4 2020-04-12 00:42:43 PDT
Committed r259941: <https://trac.webkit.org/changeset/259941> All reviewed patches have been landed. Closing bug and clearing flags on attachment 396209 [details].
Note You need to log in before you can comment on or make changes to this bug.