Source/JavaScriptCore/runtime/IntlObject.cpp
@@ -323,6 +323,23 @@ unsigned intlDefaultNumberOption(JSGlobalObject* globalObject, JSValue value, Pr
     return fallback;
 }
 
+// http://www.unicode.org/reports/tr35/#Unicode_locale_identifier
+bool isUnicodeLocaleIdentifierType(StringView string)
+{
+    ASSERT(!string.isNull());
+
+    auto length = string.length();
+    if (length < 3 || length > 8)
+        return false;
+
+    for (auto character : string.codeUnits()) {
+        if (!isASCIIAlphanumeric(character))
+            return false;
+    }
+
+    return true;
+}
+
 static String privateUseLangTag(const Vector<String>& parts, size_t startIndex)
 {
     size_t numParts = parts.size();
